--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<jdom.version>2.0.2</jdom.version>
 		<joda.version>2.9.7</joda.version>
 		<jackson.version>2.7.3</jackson.version>
-		<opencsv.version>2.3</opencsv.version>
+		<opencsv.version>3.8</opencsv.version>
 		<mongo.version>3.4.2</mongo.version>
 	</properties>
 
@@ -86,7 +86,7 @@
 
 		<!-- Open CSV -->
 		<dependency>
-			<groupId>net.sf.opencsv</groupId>
+			<groupId>com.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
 			<version>${opencsv.version}</version>
 		</dependency>
